--- a/src/pages/main/ui/MainPage.module.css
+++ b/src/pages/main/ui/MainPage.module.css
@@ -12,6 +12,6 @@
 	flex: 1;
 	padding-inline: var(--app-inline-padding);
 	padding-top: var(--header-height);
-	padding-bottom: 16px;
+	padding-bottom: var(--app-bottom-padding);
 	overflow-y: auto;
 }
